--- a/menu.xaml
+++ b/menu.xaml
@@ -14,13 +14,13 @@
                 <ColumnDefinition Width="65*"/>
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="x1_button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x1_Button_Click_4" Margin="96,180,695,495"/>
-            <Button x:Name="x2_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x2_Button_Click_5" Margin="490,180,300,495"/>
-            <Button x:Name="x3_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x3_Button_Click_6" Margin="96,396,695,279"/>
-            <Button x:Name="x4_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x4_Button_Click_7" Margin="490,396,300,279"/>
-            <Button x:Name="x5_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x5_Button_Click_8" Margin="98,617,692,58"/>
-            <Button x:Name="x6_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x6_Button_Click_9" Margin="490,617,300,58"/>
-            <Button x:Name="doKosza_Button" Content="Przejść do kosza" HorizontalAlignment="Center" Height="40" Width="230" FontSize="30" Background="BlanchedAlmond" Click="doKosza_Button_10" Margin="328,654,318,11"/>
+            <Button x:Name="PizPri_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="dodajPizzeClick" Margin="96,180,695,495"/>
+            <Button x:Name="PizDia_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="dodajPizzeClick" Margin="490,180,300,495"/>
+            <Button x:Name="PizChi_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="dodajPizzeClick" Margin="96,396,695,279"/>
+            <Button x:Name="PizCar_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="dodajPizzeClick" Margin="490,396,300,279"/>
+            <Button x:Name="PizMar_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="dodajPizzeClick" Margin="98,617,692,58"/>
+            <Button x:Name="PizSal_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="x6_dodajPizzeClick" Margin="490,617,300,58"/>
+            <Button x:Name="doKosza_Button" Content="Przejść do kosza" HorizontalAlignment="Center" Height="40" Width="230" FontSize="30" Background="BlanchedAlmond" Click="doKoszaClick" Margin="328,654,318,11"/>
             <Label x:Name="x1_Label" Height="128" Width="176" Margin="52,42,648,535">
                 <Image Source="source/primavera.png" Stretch="Fill"/>
             </Label>
@@ -39,18 +39,18 @@
             <Label x:Name="x6_Label" Height="128" Width="176" Margin="445,470,255,107">
                 <Image Source="source/Salame.jpg" Stretch="Fill"/>
             </Label>
-            <TextBox Name="x1_Text" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Primavera" FontSize="25" Height="50" Width="190" Margin="233,38,453,617"></TextBox>
-            <TextBox Name="x1_Text_1" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, cebulą i bekonem." FontSize="20" Height="120" Width="190" Margin="233,94,453,491"></TextBox>
-            <TextBox Name="x2_Text" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Diavalo" FontSize="25" Height="50" Width="190" Margin="626,38,60,617"></TextBox>
-            <TextBox Name="x2_Text_2" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Czerwone ciasto z brzegami pełnymi sera, kukurydzą, salami, serem, sosem i kabanosem." FontSize="20" Height="140" Width="190" Margin="626,94,60,471"></TextBox>
-            <TextBox Name="x3_Text" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Chiken" FontSize="25" Height="50" Width="190" Margin="233,252,453,403"></TextBox>
-            <TextBox Name="x3_Text_3" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z kurczakiem, ananasem, serem, śliwkami suszonymi i sosem." FontSize="20" Height="120" Width="190" Margin="233,308,453,277"></TextBox>
-            <TextBox Name="x4_Text" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Carbonara" FontSize="25" Height="50" Width="190" Margin="626,252,60,403"></TextBox>
-            <TextBox Name="x4_Text_4" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z serem, pomidoramy, bekonem i cebulą." FontSize="20" Height="120" Width="190" Margin="626,308,60,277"></TextBox>
-            <TextBox Name="x5_Text" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Margherita" FontSize="25" Height="50" Width="190" Margin="233,470,453,185"></TextBox>
-            <TextBox Name="x5_Text_5" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, bazylią i oregano." FontSize="20" Height="120" Width="190" Margin="233,526,453,59"></TextBox>
-            <TextBox Name="x6_Text" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Salame" FontSize="25" Height="50" Width="190" Margin="626,470,60,185"></TextBox>
-            <TextBox Name="x6_Text_6" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, oliwkami czarnymi i zielonymi, pieczarkami i salami." FontSize="20" Height="120" Width="190" Margin="626,526,60,59"></TextBox>
+            <TextBox Name="PizPri" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Primavera" FontSize="25" Height="50" Width="190" Margin="233,38,453,617"></TextBox>
+            <TextBox Name="PizPriDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, cebulą i bekonem." FontSize="20" Height="120" Width="190" Margin="233,94,453,491"></TextBox>
+            <TextBox Name="PizDia" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Diavalo" FontSize="25" Height="50" Width="190" Margin="626,38,60,617"></TextBox>
+            <TextBox Name="PizDiaDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Czerwone ciasto z brzegami pełnymi sera, kukurydzą, salami, serem, sosem i kabanosem." FontSize="20" Height="140" Width="190" Margin="626,94,60,471"></TextBox>
+            <TextBox Name="PizChi" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Chiken" FontSize="25" Height="50" Width="190" Margin="233,252,453,403"></TextBox>
+            <TextBox Name="PizChiDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z kurczakiem, ananasem, serem, śliwkami suszonymi i sosem." FontSize="20" Height="120" Width="190" Margin="233,308,453,277"></TextBox>
+            <TextBox Name="PizCar" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Carbonara" FontSize="25" Height="50" Width="190" Margin="626,252,60,403"></TextBox>
+            <TextBox Name="PizCarDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z serem, pomidoramy, bekonem i cebulą." FontSize="20" Height="120" Width="190" Margin="626,308,60,277"></TextBox>
+            <TextBox Name="PizMar" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Margherita" FontSize="25" Height="50" Width="190" Margin="233,470,453,185"></TextBox>
+            <TextBox Name="PizMarDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, bazylią i oregano." FontSize="20" Height="120" Width="190" Margin="233,526,453,59"></TextBox>
+            <TextBox Name="PizSal" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Salame" FontSize="25" Height="50" Width="190" Margin="626,470,60,185"></TextBox>
+            <TextBox Name="PizSalDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, oliwkami czarnymi i zielonymi, pieczarkami i salami." FontSize="20" Height="120" Width="190" Margin="626,526,60,59"></TextBox>
         </Grid>
 
     </ScrollViewer>
