--- a/Koszyk.xaml
+++ b/Koszyk.xaml
@@ -5,12 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pizzeria"
         mc:Ignorable="d"
-        Title="Koszyk" Height="850" Width="500">
-    <ScrollViewer HorizontalScrollBarVisibility="Auto">
-        <Grid Height="765" Width="475">
-            <Label x:Name="x1_Label" Content="Wpisz miasto:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="160" Background="BlanchedAlmond"  Margin="21,54,0,654"/>
-            <Label x:Name="x2_Label" Content="Wpisz miasto:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="160" Background="BlanchedAlmond" Margin="21,146,0,572"  />
+        Title="Koszyk" Height="850" Width="600">
 
+    <Grid Height="765" Width="475">
+        <Grid>
+            <Image Source="source/pizza diavola.jpg" Stretch="Fill"/>
         </Grid>
-    </ScrollViewer>
+        <Label x:Name="Adres" Content="Adres:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="160" Background="BlanchedAlmond"  Margin="21,54,0,654"/>
+        <Label x:Name="Telefon" Content="Telefon:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="160" Background="BlanchedAlmond" Margin="21,146,0,572"/>
+        <Label x:Name="Suma" Content="Suma:" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="135" Background="BlanchedAlmond" Margin="173,580,0,133" Height="52"/>
+        <TextBox x:Name="AdresName" HorizontalAlignment="Left"  Height="50" Margin="206,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="259" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <TextBox x:Name="TelefonName" HorizontalAlignment="Left"  Height="50" Margin="206,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="259" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" FontSize="22"/>
+
+        <Button x:Name="LoginButton" Content="X" HorizontalAlignment="Left"  Margin="0,716,0,0" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Width="40" FontSize="35" Background="BlanchedAlmond"/>
+        <Button x:Name="Zamow" Content="ZAMÓW" HorizontalAlignment="Center"  Margin="158,652,145,67" VerticalAlignment="Center" HorizontalContentAlignment="Center" Width="172" FontSize="35" Background="BlanchedAlmond" Height="46" Click="Zamow_Click"/>
+        <Button x:Name="Usun" Content="USUŃ" HorizontalAlignment="Center"  Margin="158,716,145,0" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" Width="172" FontSize="35" Background="BlanchedAlmond" Click="Usun_Click"/>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto">
+            <DataGrid Name="dataGrid" Height="320" Width="410" VerticalAlignment="Center" Background="#FFEBF091" ItemsSource="{Binding dane}">
+                <DataGridTextColumn Header="Pizza" Width="210" Binding="{Binding Key}"/>
+                <DataGridTextColumn Header="Count" Width="100" Binding="{Binding Value}"/>
+            </DataGrid>
+        </ScrollViewer>
+
+
+    </Grid>
 </Window>
