--- a/Registr.xaml
+++ b/Registr.xaml
@@ -9,9 +9,9 @@
         Title="Registr" Height="500" Width="1000">
     
     <Grid Margin="0,0,-5,0.6">
-        <Grid>
-            <Image Source="source/pizza.jpg"/>
-        </Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="Resources/pizza.jpg"/>
+        </Grid.Background>
         <Label Content="Rejestracja" HorizontalAlignment="Left" Margin="415,12,0,0" VerticalAlignment="Top" Height="150" Width="250" FontSize="50"/>
         <Label Content="Login" HorizontalAlignment="Left" Margin="179,73,0,346.4" VerticalAlignment="Center" Height="80" Width="150" FontSize="50"/>
         <Label Content="Imię" HorizontalAlignment="Left" Margin="179,151,0,268.4" VerticalAlignment="Center" Height="80" Width="150" FontSize="50"/>
