--- a/menu.xaml
+++ b/menu.xaml
@@ -22,22 +22,34 @@
             <Button x:Name="PizSal_Button" Content="Dodaj do kosza" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="30" Width="85" Background="BlanchedAlmond" Click="dodajPizzeClick" Margin="490,617,300,58"/>
             <Button x:Name="doKosza_Button" Content="Przejść do kosza" HorizontalAlignment="Center" Height="40" Width="230" FontSize="30" Background="BlanchedAlmond" Click="doKoszaClick" Margin="328,654,318,11"/>
             <Label x:Name="x1_Label" Height="128" Width="176" Margin="52,42,648,535">
-                <Image Source="source/primavera.png" Stretch="Fill"/>
+                <Label.Background>
+                    <ImageBrush ImageSource="Resources/primavera.png" Stretch="Fill"/>
+                </Label.Background>
             </Label>
             <Label x:Name="x2_label" Height="128" Width="176" Margin="445,42,255,535">
-                <Image Source="source/pizza diavola.jpg" Stretch="Fill"/>
+                <Label.Background>
+                    <ImageBrush ImageSource="Resources/pizza diavola.jpg" Stretch="Fill"/>
+                </Label.Background>
             </Label>
             <Label x:Name="x3_Label" Height="128" Width="176" Margin="52,252,648,325">
-                <Image Source="source/pizza chicken.jpg" Stretch="Fill"/>
+                <Label.Background>
+                    <ImageBrush ImageSource="Resources/pizza chicken.jpg" Stretch="Fill"/>
+                </Label.Background>
             </Label>
             <Label x:Name="x4_Label" Height="128" Width="176" Margin="445,252,255,325">
-                <Image Source="source/carbonara.jpg" Stretch="Fill"/>
+                <Label.Background>
+                    <ImageBrush ImageSource="Resources/carbonara.jpg" Stretch="Fill"/>
+                </Label.Background>
             </Label>
             <Label x:Name="x5_Label" Height="128" Width="176" Margin="52,470,648,107">
-                <Image Source="source/margherita.jpg" Stretch="Fill"/>
+                <Label.Background>
+                    <ImageBrush ImageSource="Resources/margherita.jpg" Stretch="Fill"/>
+                </Label.Background>
             </Label>
             <Label x:Name="x6_Label" Height="128" Width="176" Margin="445,470,255,107">
-                <Image Source="source/Salame.jpg" Stretch="Fill"/>
+                <Label.Background>
+                    <ImageBrush ImageSource="Resources/Salame.jpg" Stretch="Fill"/>
+                </Label.Background>
             </Label>
             <TextBox Name="PizPri" TextWrapping="NoWrap" HorizontalContentAlignment="Center" Text="Pizza Primavera" FontSize="25" Height="50" Width="190" Margin="233,38,453,617"></TextBox>
             <TextBox Name="PizPriDes" TextWrapping="Wrap" HorizontalContentAlignment="Center" Text="Z sosem, serem, cebulą i bekonem." FontSize="20" Height="120" Width="190" Margin="233,94,453,491"></TextBox>
