--- a/Koszyk.xaml
+++ b/Koszyk.xaml
@@ -3,30 +3,38 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:wpfx="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:Pizzeria"
         mc:Ignorable="d"
         Title="Koszyk" Height="850" Width="600">
 
     <Grid Height="765" Width="475">
         <Grid.Background>
-            <ImageBrush ImageSource="Resources/pizza diavola.jpg" Stretch="Fill"/>
+            <ImageBrush ImageSource="Resources/pizza diavola.jpg"/>
         </Grid.Background>
-        <Label x:Name="Adres" Content="Adres:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="160" Background="BlanchedAlmond"  Margin="21,54,0,654"/>
-        <Label x:Name="Telefon" Content="Telefon:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="160" Background="BlanchedAlmond" Margin="21,146,0,572"/>
-        <Label x:Name="Suma" Content="Suma:" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="135" Background="BlanchedAlmond" Margin="173,580,0,133" Height="52"/>
-        <TextBox x:Name="AdresName" HorizontalAlignment="Left"  Height="50" Margin="206,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="259" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" FontSize="22"/>
-        <TextBox x:Name="TelefonName" HorizontalAlignment="Left"  Height="50" Margin="206,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="259" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <Label x:Name="Adres" Content="Adres:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="77" Background="BlanchedAlmond"  Margin="21,58,0,657"/>
+        <Label x:Name="Telefon" Content="Telefon:" FontSize="24" HorizontalAlignment="Left" Height="50" Width="97" Background="BlanchedAlmond" Margin="21,146,0,569"/>
+        <Label x:Name="Suma" Content="Suma:" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="203" Background="BlanchedAlmond" Margin="142,580,0,133" Height="52"/>
+        <Label x:Name="PizPri" Content="Pizza Primavera" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="236" Background="BlanchedAlmond" Margin="24,244,0,465" Height="56" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizDia" Content="Pizza Diavalo" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="236" Background="BlanchedAlmond" Margin="24,305,0,411" Height="49" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizChi" Content="Pizza Chiken" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="236" Background="BlanchedAlmond" Margin="24,524,0,190" Height="51" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizCar" Content="Pizza Carbonara" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="236" Background="BlanchedAlmond" Margin="24,359,0,352" Height="54" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizMar" Content="Pizza Margherita" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="236" Background="BlanchedAlmond" Margin="24,418,0,298" Height="49" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizSal" Content="Pizza Salame" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="236" Background="BlanchedAlmond" Margin="24,472,0,246" Height="47" RenderTransformOrigin="0.5,0.5"/>
 
-        <Button x:Name="LoginButton" Content="X" HorizontalAlignment="Left"  Margin="0,716,0,0" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Width="40" FontSize="35" Background="BlanchedAlmond"/>
+        <Label x:Name="PizSalCount" Content="x 0" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="61" Background="BlanchedAlmond" Margin="404,472,0,246" Height="47" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizMarCount" Content="x 0" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="61" Background="BlanchedAlmond" Margin="404,418,0,298" Height="49" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizPriCount" Content="x 0" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="61" Background="BlanchedAlmond" Margin="404,244,0,465" Height="56" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizDiaCount" Content="x 0" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="61" Background="BlanchedAlmond" Margin="404,305,0,411" Height="49" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizChiCount" Content="x 0" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="61" Background="BlanchedAlmond" Margin="404,524,0,190" Height="51" RenderTransformOrigin="0.5,0.5"/>
+        <Label x:Name="PizCarCount" Content="x 0" FontSize="30" VerticalAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="61" Background="BlanchedAlmond" Margin="404,359,0,352" Height="54" RenderTransformOrigin="0.5,0.5"/>
+
+        <TextBox x:Name="AdresName" HorizontalAlignment="Left"  Height="50" Margin="206,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="259" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <wpfx:MaskedTextBox x:Name="TelefonName" HorizontalAlignment="Left"  Height="50" Margin="206,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="259" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" FontSize="22" Mask="(+48) 000-000-000" />
+
+        <Button x:Name="Return" Content="X" HorizontalAlignment="Left"  Margin="0,716,0,0" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Width="40" FontSize="35" Background="BlanchedAlmond" Click="Return_Click"/>
         <Button x:Name="Zamow" Content="ZAMÓW" HorizontalAlignment="Center"  Margin="158,652,145,67" VerticalAlignment="Center" HorizontalContentAlignment="Center" Width="172" FontSize="35" Background="BlanchedAlmond" Height="46" Click="Zamow_Click"/>
         <Button x:Name="Usun" Content="USUŃ" HorizontalAlignment="Center"  Margin="158,716,145,0" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Top" Width="172" FontSize="35" Background="BlanchedAlmond" Click="Usun_Click"/>
-        <ScrollViewer HorizontalScrollBarVisibility="Auto">
-            <DataGrid Name="dataGrid" Height="320" Width="410" VerticalAlignment="Center" Background="#FFEBF091" ItemsSource="{Binding dane}">
-                <DataGridTextColumn Header="Pizza" Width="210" Binding="{Binding Key}"/>
-                <DataGridTextColumn Header="Count" Width="100" Binding="{Binding Value}"/>
-            </DataGrid>
-        </ScrollViewer>
-
 
     </Grid>
 </Window>
