--- a/Registr.xaml
+++ b/Registr.xaml
@@ -7,21 +7,21 @@
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800"
         Title="Registr" Height="500" Width="1000">
-    
-    <Grid Margin="0,0,-5,0.6">
+
+    <Grid Margin="0,0,-5,0.6" >
         <Grid.Background>
             <ImageBrush ImageSource="Resources/pizza.jpg"/>
         </Grid.Background>
-        <Label Content="Rejestracja" HorizontalAlignment="Left" Margin="415,12,0,0" VerticalAlignment="Top" Height="150" Width="250" FontSize="50"/>
-        <Label Content="Login" HorizontalAlignment="Left" Margin="179,73,0,346.4" VerticalAlignment="Center" Height="80" Width="150" FontSize="50"/>
-        <Label Content="Imię" HorizontalAlignment="Left" Margin="179,151,0,268.4" VerticalAlignment="Center" Height="80" Width="150" FontSize="50"/>
-        <Label Content="Nazwisko" HorizontalAlignment="Left" Margin="179,216,0,203.4" VerticalAlignment="Center" Height="80" Width="250" FontSize="50"/>
-        <Label Content="Hasło" HorizontalAlignment="Left" Margin="179,296,0,123.4" VerticalAlignment="Center" Height="80" Width="250" FontSize="50"/>
-        <TextBox x:Name="loginField" HorizontalAlignment="Left" Height="50" Margin="434,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
-        <TextBox x:Name="nameField" HorizontalAlignment="Center" Height="50" Margin="434,167,281,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
-        <TextBox x:Name="surnameField" HorizontalAlignment="Stretch" Height="50" Margin="434,240,281,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
-        <PasswordBox MaxLength="8" x:Name="hasloField" HorizontalAlignment="Stretch" Height="50" Margin="434,312,281,0"  VerticalAlignment="Top" Width="290" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
-        <Button x:Name="zalkontoButton" Content="Zaloż Konto" HorizontalAlignment="Center"  Margin="398,409,307,10.4" VerticalAlignment="Top" Height="60" Width="250" FontSize="35" Background="BlanchedAlmond" Click="zalkontoButton_Click_3"/>
+        <Label Content="Rejestracja" HorizontalAlignment="Left" Margin="415,12,0,0" VerticalAlignment="Top" Height="70" Width="250" FontSize="50"/>
+        <Label Content="Login" HorizontalAlignment="Left" Margin="243,92,0,290.4" VerticalAlignment="Center"  Height="86" Width="167" FontSize="50"/>
+        <Label Content="Imię" HorizontalAlignment="Left" Margin="260,153,0,248.4" VerticalAlignment="Center" Height="67" Width="150" FontSize="50"/>
+        <Label Content="Nazwisko" HorizontalAlignment="Left" Margin="197,220,0,171.4" VerticalAlignment="Center" Height="77" Width="233" FontSize="50"/>
+        <Label Content="Hasło" HorizontalAlignment="Left" Margin="243,297,0,108.4" VerticalAlignment="Center" Height="63" Width="182" FontSize="50"/>
+        <TextBox x:Name="loginField" HorizontalAlignment="Left" Height="50" Margin="429,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="287" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <TextBox x:Name="nameField" HorizontalAlignment="Center" Height="50" Margin="429,179,273,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="295" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <TextBox x:Name="surnameField" HorizontalAlignment="Stretch" Height="50" Width="295" Margin="429,243,273,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <PasswordBox MaxLength="8" x:Name="hasloField" HorizontalAlignment="Stretch" Height="50" Width="295" Margin="430,312,273,0"  VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" FontSize="22"/>
+        <Button x:Name="zalkontoButton" Content="Zaloż Konto" HorizontalAlignment="Center"  Margin="415,397,332,0" VerticalAlignment="Top" Height="61" Width="250" FontSize="35" Background="BlanchedAlmond" Click="zalkontoButton_Click_3"/>
 
 
     </Grid>
